# voice-agent

./: .env.example  .gitignore  .stignore  CLAUDE.md  Dockerfile  Dockerfile.proxy  docker-compose.proxy.yml  notes.md  pyproject.toml  voice-agent-config.yaml  voice-mode.md
chat-ui/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
chat-ui/src/: App.tsx  index.css
chat-ui/src/api/: client.ts
chat-ui/src/components/chat/: ChatInput.tsx  Message.tsx  MessageList.tsx  StreamingIndicator.tsx  ThinkingBlock.tsx
chat-ui/src/components/layout/: Header.tsx  Sidebar.tsx
chat-ui/src/components/ui/: sheet.tsx
chat-ui/src/hooks/: useAgents.ts  useChat.ts  useConversations.ts  useTheme.ts
context/: notes.md  projects.md
docs/: pi-proxy-plan.md  pi-server-setup.md  piserver-claude-md.md
docs/plans/: 2026-01-13-agent-command-parsing.md  2026-01-13-mem0-integration-design.md  2026-01-18-create-agent-skill.md  conversation-parser-plan.md
docs/refactored-popping-muffin/: 01-backend-chat-endpoint.md  02-frontend-scaffold.md  03-core-chat-ui.md  04-extended-features.md  05-deployment.md  README.md
scripts/: deploy-to-pi.sh  nightly-mem0-sync.py  start-backend.sh  start.sh  update.sh  voice-agent.service
src/voice_agent/: __init__.py  agents.py  audio.py  claude.py  commands.py  main.py  memory.py  proxy.py  research.py  transcribe.py  tts.py  tts_api.py  tts_chatterbox.py  tts_kokoro.py
systemd/: mem0-sync.service  mem0-sync.timer
tests/: test_agents.py  test_commands.py  test_transcribe.py
voice-commands/: listen.md
